argocd/apps/argocd-server/longhorn.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: longhorn-system
