argocd/apps/argocd-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.drewpayment.com"
    external-dns.home.arpa/enabled: "true"
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Kubernetes
    gethomepage.dev/icon: argocd.png
    gethomepage.dev/description: "ArgoCD is a tool for managing Kubernetes applications."
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=argocd-server"
spec:
  ingressClassName: external
  rules:
  - host: &host 'argocd.drewpayment.com'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
  tls:
  - hosts:
    - *host
    secretName: argocd-server-tls # as expected by argocd-server
